# agentic_workflow

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  experiments.ipynb  functions.py  install_nvidia_container_toolkit.sh  planning.ipynb  pyproject.toml  reflection.ipynb  requirements.in  requirements.txt  sketch.ipynb  tool_use.ipynb
notebook/: functions.py  planning.ipynb  reflection.ipynb  sketch.ipynb  tool_use.ipynb
scripts/: install_nvidia_container_toolkit.sh
src/agentic/: planning.py  tool.py
src/agentic/tool/: __init__.py  base.py  tool.py
src/tool/: __init__.py  _base.py
